# FileMGR

./: CMakeLists.txt  readme-ru.md  readme.md
include/: model.hpp  view.hpp
include/view/cli/: linux.hpp  windows.hpp
src/: CMakeLists.txt  model.cpp
src/view/cli/: linux.cpp  windows.cpp
